--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -1,1 +1,32 @@
-{"name":"@momomemory/sdk","version":"0.0.1","type":"module","main":"./dist/index.js","types":"./dist/index.d.ts","exports":{".":{"import":"./dist/index.js","types":"./dist/index.d.ts"}},"scripts":{"build":"tsc -p .","test":"bun test","codegen":"bun scripts/codegen.ts","lint":"echo lint"},"devDependencies":{"typescript":"^5.0.0","openapi-typescript":"^7.0.0","openapi-fetch":"^0.13.0"},"dependencies":{"openapi-fetch":"^0.13.0"}}
+{
+  "name": "@momomemory/sdk",
+  "version": "0.0.1",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsc -p .",
+    "test": "bun test",
+    "codegen": "bun scripts/codegen.ts",
+    "lint": "echo lint"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "openapi-typescript": "^7.0.0",
+    "openapi-fetch": "^0.13.0"
+  },
+  "dependencies": {
+    "openapi-fetch": "^0.13.0"
+  }
+}
