fix(api): switch to axum-extra Query extractor for array param support
Replace axum::extract::Query with axum_extra::extract::Query in list_documents and list_memories handlers. The axum-extra version uses serde_qs instead of serde_urlencoded, enabling support for bracket-notation array query parameters (e.g., containerTags[]=a&containerTags[]=b).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ rust-version = "1.75"
 [workspace.dependencies]
 # Web Framework
 axum = { version = "0.8", features = ["macros", "multipart"] }
-axum-extra = { version = "0.10", features = ["typed-header"] }
+axum-extra = { version = "0.10", features = ["typed-header", "query"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
 
