--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -1,6 +1,18 @@
 {
   "name": "@momomemory/sdk",
   "version": "0.0.1",
+  "description": "TypeScript SDK for Momo — the self-hostable AI memory system",
+  "keywords": ["momo", "ai", "memory", "vector-search", "embeddings", "sdk", "typescript"],
+  "license": "MIT",
+  "author": "Momo Contributors",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/momomemory/sdk-typescript.git"
+  },
+  "bugs": {
+    "url": "https://github.com/momomemory/monorepo/issues"
+  },
+  "homepage": "https://github.com/momomemory/sdk-typescript#readme",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
