feat(opencode-momo): implement tool, chat.message hook, and event compaction
- Add momo tool with 6 modes: help, add, search, profile, list, forget
- Add chat.message hook with once-per-session memory context injection
- Add event hook for conversation compaction ingestion with cooldowns
- Add context.ts for formatting memory data into prompt sections
- Add compaction.ts with session state tracking and 30s cooldown
- Add comprehensive tests for tool modes and chat.message dedup (40 tests)

--- a/plugins/opencode-momo/package.json
+++ b/plugins/opencode-momo/package.json
@@ -30,7 +30,7 @@
   },
   "opencode": {
     "type": "plugin",
-    "hooks": ["chat.message", "event"]
+    "hooks": ["chat.message", "event", "tool"]
   },
   "files": ["dist"]
 }
