chore(opencode-momo): normalize npm metadata

--- a/plugins/opencode-momo/package.json
+++ b/plugins/opencode-momo/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "opencode-momo": "./dist/cli.js"
+    "opencode-momo": "dist/cli.js"
   },
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node && bun build ./src/cli.ts --outfile ./dist/cli.js --target node && tsc --emitDeclarationOnly",
@@ -25,7 +25,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/momomemory/opencode-momo"
+    "url": "git+https://github.com/momomemory/opencode-momo.git"
   },
   "dependencies": {
     "@opencode-ai/plugin": "^1.1.53",
