--- a/plugins/opencode-momo/.github/workflows/publish.yml
+++ b/plugins/opencode-momo/.github/workflows/publish.yml
@@ -41,7 +41,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: bun install
@@ -56,4 +55,6 @@ jobs:
         run: bun run build
 
       - name: Publish to npm
+        env:
+          NODE_AUTH_TOKEN: ""
         run: npm publish --provenance --access public
