--- a/plugins/opencode-momo/package.json
+++ b/plugins/opencode-momo/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "@opencode-ai/plugin": "^1.1.53",
-    "@momomemory/sdk": "^0.2.0"
+    "@opencode-ai/sdk": "^1.1.53",
+    "@momomemory/sdk": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
