--- a/plugins/pi-momo/tsconfig.json
+++ b/plugins/pi-momo/tsconfig.json
@@ -16,5 +16,5 @@
     "types": ["bun-types"]
   },
   "include": ["src/**/*.ts", "types/**/*.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts"]
 }
